переименована section places - elements

--- a/index.html
+++ b/index.html
@@ -30,59 +30,59 @@
             </button>
         </section>
       
-        <section class="places">
-            <ul class="places__catalogue"> 
-                <li class="places__item">
-                  <button type="button" aria-label="Удалить" class="button places__button-delete"></button>
-                    <img class="places__image" src="./images/Karachaevsk.jpg" alt="Карачаевск">
-                    <div class="places__info">
-                      <h2 class="places__title">Карачаево-Черкесия</h2>
-                      <button type="button" aria-label="Нравится" class="button places__button-like"></button>
+    <section class="elements">
+            <ul class="elements__catalogue"> 
+                <li class="elements__item">
+                  <button type="button" aria-label="Удалить" class="button elements__button-delete"></button>
+                    <img class="elements__image" src="./images/Karachaevsk.jpg" alt="Карачаевск">
+                    <div class="elements__info">
+                      <h2 class="elements__title">Карачаево-Черкесия</h2>
+                      <button type="button" aria-label="Нравится" class="button elements__button-like"></button>
                     </div>
                 </li>
-                <li class="places__item">
-                  <button type="button" aria-label="Удалить" class="button places__button-delete"></button>
-                    <img class="places__image" src="./images/Elbrus.png" alt="гора Эльбрус">
-                    <div class="places__info">
-                      <h2 class="places__title">Эльбрус</h2>
-                       <button type="button" aria-label="Нравится" class="button places__button-like"></button>
+                <li class="elements__item">
+                  <button type="button" aria-label="Удалить" class="button elements__button-delete"></button>
+                    <img class="elements__image" src="./images/Elbrus.png" alt="гора Эльбрус">
+                    <div class="elements__info">
+                      <h2 class="elements__title">Эльбрус</h2>
+                       <button type="button" aria-label="Нравится" class="button elements__button-like"></button>
                     </div>
                 </li>
-                <li class="places__item">
-                  <button type="button" aria-label="Удалить" class="button places__button-delete"></button>
-                    <img class="places__image" src="./images/Donbai.png" alt="Донбай">
-                    <div class="places__info">
-                      <h2 class="places__title">Донбай</h2>
-                        <button type="button" aria-label="Нравится" class="button places__button-like"></button>
+                <li class="elements__item">
+                  <button type="button" aria-label="Удалить" class="button elements__button-delete"></button>
+                    <img class="elements__image" src="./images/Donbai.png" alt="Донбай">
+                    <div class="elements__info">
+                      <h2 class="elements__title">Донбай</h2>
+                        <button type="button" aria-label="Нравится" class="button elements__button-like"></button>
                     </div>
                 </li>
-                <li class="places__item">
-                  <button type="button" aria-label="Удалить" class="button places__button-delete"></button>
-                    <img class="places__image" src="./images/arhiz.jpeg" alt="Архыз">
-                    <div class="places__info">
-                      <h2 class="places__title">Архыз</h2>
-                        <button type="button" aria-label="Нравится" class="button places__button-like"></button>
+                <li class="elements__item">
+                  <button type="button" aria-label="Удалить" class="button elements__button-delete"></button>
+                    <img class="elements__image" src="./images/arhiz.jpeg" alt="Архыз">
+                    <div class="elements__info">
+                      <h2 class="elements__title">Архыз</h2>
+                        <button type="button" aria-label="Нравится" class="button elements__button-like"></button>
                     </div>
                  </li>
-                <li class="places__item">
-                  <button type="button" aria-label="Удалить" class="button places__button-delete"></button>
-                    <img class="places__image" src="./images/Kamchatka.jpg" alt="Камчатка">
-                    <div class="places__info">
-                      <h2 class="places__title">Камчатка</h2>
-                        <button type="button" aria-label="Нравится" class="button places__button-like"></button>
+                <li class="elements__item">
+                  <button type="button" aria-label="Удалить" class="button elements__button-delete"></button>
+                    <img class="elements__image" src="./images/Kamchatka.jpg" alt="Камчатка">
+                    <div class="elements__info">
+                      <h2 class="elements__title">Камчатка</h2>
+                        <button type="button" aria-label="Нравится" class="button elements__button-like"></button>
                     </div>
                 </li>
-                <li class="places__item">
-                  <button type="button" aria-label="Удалить" class="button places__button-delete"></button>
-                    <img class="places__image" src="./images/baikal.jpg" alt="Байкал">
-                    <div class="places__info">
-                      <h2 class="places__title">Байкал</h2>
-                        <button type="button" aria-label="Нравится" class="button places__button-like"></button>
+                <li class="elements__item">
+                  <button type="button" aria-label="Удалить" class="button elements__button-delete"></button>
+                    <img class="elements__image" src="./images/baikal.jpg" alt="Байкал">
+                    <div class="elements__info">
+                      <h2 class="elements__title">Байкал</h2>
+                        <button type="button" aria-label="Нравится" class="button elements__button-like"></button>
                     </div>
                 </li>
             </ul>
         </section>
-             
+
       </div>
     </main>
 
@@ -153,15 +153,13 @@
   
 
     <template id="cards-template">
-      <li class="places">
-        <img class="places__image" src="#" alt="#" />
-        <div class="places__info">
-          <h2 class="places__title"></h2>
-          <div class="places__like">
-            <button type="button" aria-label="Нравится" class="button places__button-like"></button>
+      <li class="elements__item">
+        <button type="button" aria-label="Удалить" class="button elements__button-delete"></button>
+          <img class="elements__image" src="" alt="">
+          <div class="elements__info">
+            <h2 class="elements__title"></h2>
+            <button type="button" aria-label="Нравится" class="button elements__button-like"></button>
           </div>
-        </div>
-        <button type="button" aria-label="Удалить" class="button places__button-delete"></button>
       </li>
     </template>
 
