добавлен elements initialCards не отображается

--- a/index.html
+++ b/index.html
@@ -29,10 +29,11 @@
             <button type="button" aria-label="Добавить картинку" class="button profile__button-add">
             </button>
         </section>
-      
-    <section class="elements">
+
+          
+        <section class="elements">
             <ul class="elements__catalogue"> 
-                <li class="elements__item">
+              <!--  <li class="elements__item">
                   <button type="button" aria-label="Удалить" class="button elements__button-delete"></button>
                     <img class="elements__image" src="./images/Karachaevsk.jpg" alt="Карачаевск">
                     <div class="elements__info">
@@ -79,7 +80,7 @@
                       <h2 class="elements__title">Байкал</h2>
                         <button type="button" aria-label="Нравится" class="button elements__button-like"></button>
                     </div>
-                </li>
+                </li>-->
             </ul>
         </section>
 
