добавлены картинки через js

--- a/index.html
+++ b/index.html
@@ -151,12 +151,14 @@
         <p class="popup__name"></p>
       </div>
     </section>
+
+   
   
 
     <template id="cards-template">
       <li class="elements__item">
         <button type="button" aria-label="Удалить" class="button elements__button-delete"></button>
-          <img class="elements__image" src="" alt="">
+          <img class="elements__image" src="https://pictures.s3.yandex.net/frontend-developer/cards-compressed/baikal.jpg" alt="Байкал">
           <div class="elements__info">
             <h2 class="elements__title"></h2>
             <button type="button" aria-label="Нравится" class="button elements__button-like"></button>
