активирована функция добавления новых  фото

--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
       </div>
     </section>
 
-    <section class="popup popup_pic">
+    <section class="popup popup__pic">
       <div class="popup__container">
         <img class="popup__image" src="" alt="">
         <button type="button" aria-label="Закрыть" class="button popup__close popup__close_image"></button>
