popup__pic работает для всех фото

--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
     <template id="cards-template">
       <li class="elements__item">
         <button type="button" aria-label="Удалить" class="button elements__button-delete"></button>
-          <img class="elements__image" src="https://pictures.s3.yandex.net/frontend-developer/cards-compressed/baikal.jpg" alt="Байкал">
+          <img class="elements__image" src="" alt="">
           <div class="elements__info">
             <h2 class="elements__title"></h2>
             <button type="button" aria-label="Нравится" class="button elements__button-like"></button>
