подключен popup__pic полностью

--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
       <div class="popup__container">
         <img class="popup__image" src="" alt="">
         <button type="button" aria-label="Закрыть" class="button popup__close popup__close_image"></button>
-        <p class="popup__name"></p>
+        <p class="popup__caption"></p>
       </div>
     </section>
 
