удален закомментированный код html

--- a/index.html
+++ b/index.html
@@ -33,54 +33,6 @@
           
         <section class="elements">
             <ul class="elements__catalogue"> 
-              <!--  <li class="elements__item">
-                  <button type="button" aria-label="Удалить" class="button elements__button-delete"></button>
-                    <img class="elements__image" src="./images/Karachaevsk.jpg" alt="Карачаевск">
-                    <div class="elements__info">
-                      <h2 class="elements__title">Карачаево-Черкесия</h2>
-                      <button type="button" aria-label="Нравится" class="button elements__button-like"></button>
-                    </div>
-                </li>
-                <li class="elements__item">
-                  <button type="button" aria-label="Удалить" class="button elements__button-delete"></button>
-                    <img class="elements__image" src="./images/Elbrus.png" alt="гора Эльбрус">
-                    <div class="elements__info">
-                      <h2 class="elements__title">Эльбрус</h2>
-                       <button type="button" aria-label="Нравится" class="button elements__button-like"></button>
-                    </div>
-                </li>
-                <li class="elements__item">
-                  <button type="button" aria-label="Удалить" class="button elements__button-delete"></button>
-                    <img class="elements__image" src="./images/Donbai.png" alt="Донбай">
-                    <div class="elements__info">
-                      <h2 class="elements__title">Донбай</h2>
-                        <button type="button" aria-label="Нравится" class="button elements__button-like"></button>
-                    </div>
-                </li>
-                <li class="elements__item">
-                  <button type="button" aria-label="Удалить" class="button elements__button-delete"></button>
-                    <img class="elements__image" src="./images/arhiz.jpeg" alt="Архыз">
-                    <div class="elements__info">
-                      <h2 class="elements__title">Архыз</h2>
-                        <button type="button" aria-label="Нравится" class="button elements__button-like"></button>
-                    </div>
-                 </li>
-                <li class="elements__item">
-                  <button type="button" aria-label="Удалить" class="button elements__button-delete"></button>
-                    <img class="elements__image" src="./images/Kamchatka.jpg" alt="Камчатка">
-                    <div class="elements__info">
-                      <h2 class="elements__title">Камчатка</h2>
-                        <button type="button" aria-label="Нравится" class="button elements__button-like"></button>
-                    </div>
-                </li>
-                <li class="elements__item">
-                  <button type="button" aria-label="Удалить" class="button elements__button-delete"></button>
-                    <img class="elements__image" src="./images/baikal.jpg" alt="Байкал">
-                    <div class="elements__info">
-                      <h2 class="elements__title">Байкал</h2>
-                        <button type="button" aria-label="Нравится" class="button elements__button-like"></button>
-                    </div>
-                </li>-->
             </ul>
         </section>
 
@@ -164,6 +116,7 @@
     </template>
 
     <script src="./script/index.js"></script>  
+    <script src="initial-сards.js"></script> 
   
 </body>
 </html>
