--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
     </template>
 
     <script src="./script/index.js"></script>  
-    <script src="initial-сards.js"></script> 
+    <script src="./script/initial-cards.js"></script> 
   
 </body>
 </html>
