прописано min и max количество знаков html

--- a/index.html
+++ b/index.html
@@ -55,6 +55,9 @@
             name="name"
             value="Жак-Ив Кусто"
             placeholder="Имя"
+            minlength="2"
+            maxlength="40"
+            required
           >
           <input
             type="text"
@@ -63,6 +66,9 @@
             name="about"
             value="Исследователь океана"
             placeholder="О себе"
+            minlength="2"
+            maxlength="200"
+            required
           >
           <button type="submit" class="popup__button-submit popup__button-submit_profile">Сохранить</button>
         </form>
@@ -81,6 +87,9 @@
             name="name"
             value=""
             placeholder="Название"
+            minlength="2"
+            maxlength="30"
+            required
           >
           <input
             type="url"
