добавлена валидация формы профайл

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
             pattern="[A-Za-zА-ЯЁа-яё -]{1,}"
             required
           >
-          <span id="name-error" class="popup__input-error">Вы пропустили это поле</span>
+          <span id="name-input-error" class="popup__input-error"></span>
           <input
             type="text"
             id="about-input"
@@ -72,7 +72,7 @@
             maxlength="200"
             required
           >
-          <span id="about-error" class="popup__input-error">Вы пропустили это поле</span>
+          <span id="about-input-error" class="popup__input-error"></span>
           <button type="submit" class="popup__button-submit popup__button-submit_profile">Сохранить</button>
         </form>
       </div>
