добавлены стили для валидации

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             id="name-input"
             class="popup__input popup__input_edit-name"
             name="name"
-            value=""
+            value="Жак-Ив Кусто"
             placeholder="Имя"
             minlength="2"
             maxlength="40"
@@ -66,7 +66,7 @@
             id="about-input"
             class="popup__input popup__input_edit-about"
             name="about"
-            value=""
+            value="Исследователь океана"
             placeholder="О себе"
             minlength="2"
             maxlength="200"
