добавлен pattern в popup__input_add-title

--- a/index.html
+++ b/index.html
@@ -93,6 +93,7 @@
             placeholder="Название"
             minlength="2"
             maxlength="30"
+            pattern=".{2,30}"
             required
           >
           <span id="nameplace-input-error" class="popup__input-error"></span>
