--- a/index.html
+++ b/index.html
@@ -131,9 +131,9 @@
       </li>
     </template>
 
-    <script src="./script/initial-cards.js"></script> 
-    <script src="./script/validate.js"></script>
-    <script src="./script/index.js"></script>  
+   
+    <script src="./script/FormValidator.js"></script>
+    <script type="module" src="./script/index.js"></script>  
     
   
 </body>
