добавлен в css счетчик лайков

--- a/src/index.html
+++ b/src/index.html
@@ -153,7 +153,10 @@
           <img class="elements__image" src="#" alt="#">
           <div class="elements__info">
             <h2 class="elements__title"></h2>
-            <button type="button" aria-label="Нравится" class="button elements__button-like"></button>
+            <div class="elements__place-like">
+              <button type="button" aria-label="Нравится" class="button elements__button-like"></button>
+              <span class="elements__like-count">0</span>
+            </div>
           </div>
       </li>
     </template>
