--- a/src/index.html
+++ b/src/index.html
@@ -7,20 +7,28 @@
   <meta name="Description" content="Автор: Татьяна Купцова, 
   Проектная работа: Место, Сайт: создан в рамках учебы в Яндекс Практикум, 
   Курс: Веб-разработка">
-  <!-- <link rel="stylesheet" href="./pages/index.css"> -->
   <title>Место</title>
 </head>
 
 <body class="page">
 
+  <!-- ***************************************************************
+      Шапка сайта
+    -->
     <header class="header">
         <img src="<%=require('./images/logo.svg')%>" alt="Лого" class="header__logo">
     </header>
 
+     <!-- ************************************************************
+      Содержимое сайта
+    -->
     <main class="container">
       <div class="content">
         <section class="profile">
-            <img class="profile__image" src="<%=require('./images/avatar.jpg')%>" alt="Профиль фото">
+            <img 
+            class="profile__image" 
+            src="<%=require('./images/avatar.jpg')%>" 
+            alt="Профиль фото">
             <div class="profile__info">
               <h1 id="profileName" class="profile__name">Жак-Ив Кусто</h1>
               <button type="button" aria-label="Редактировать" class="button profile__edit-button"></button>
@@ -38,10 +46,16 @@
       </div>
     </main>
 
+    <!-- ***************************************************************
+      Подвал сайта
+    -->
     <footer class="footer">
       <p class="footer__copyright">&copy; 2021 Tatiana KUPTSOVA</p>
     </footer>
 
+     <!-- ***************************************************************
+      Всплывающее окно редактирования профиля
+    -->
     <section class="popup popup_profile">
       <div class="popup__content popup__content_profile">
         <button type="button" aria-label="Закрыть" class="button popup__close popup__close_profile"></button>
@@ -77,7 +91,35 @@
         </form>
       </div>
     </section>
+
+       <!-- ***************************************************************
+      Всплывающее окно изменения аватара
+    -->
+    <section class="popup popup_avatar">
+      <div class="popoup__content popup__content_avatar">
+        <button type="button" class="button popup__close popup__close_avatar"></button>
+         <form name="form-newAvatar" class="popup__form popup__form_avatar">
+          <h3 class="popup__title">Обновить аватар</h3>
+          <input
+            id="avatarLink"
+            autocomplete="off"
+            type="url"
+            name="avatarLink"
+            pattern="https?://.+"
+            class="popup__input popup__input_avatar-link"
+            placeholder="Ссылка на картинку"
+            required
+          >
+          <span id="avatarLink-error" class="popup__input-error"></span> 
+          <button type="submit" class="popup__button-submit popup__button-submit_avatar">Сохранить</button>
+        </form>
+        
+      </div>
+    </section>
   
+     <!-- ***************************************************************
+      Всплывающее окно добавления фотографии
+    -->
     <section class="popup popup_card">
       <div class="popup__content popup__content_add">
         <button type="button" aria-label="Закрыть" class="button popup__close popup__close_add"></button>
@@ -111,6 +153,9 @@
       </div>
     </section>
 
+    <!-- ***************************************************************
+      Всплывающее окно просмотра фотографии
+    -->
     <section class="popup popup_pic">
       <div class="popup__container">
         <img class="popup__image" src="#" alt="#">
@@ -119,34 +164,22 @@
       </div>
     </section>
 
-    <section class="popup popup_avatar">
-      <div class="popoup__content popup__content_avatar">
-        <h3 class="popup__title">Обновить аватар</h3>
-        <form name="form-newAvatar" class="popup__form popup__form_avatar">
-          <input
-            id="avatarLink"
-            autocomplete="off"
-            type="url"
-            name="avatarLink"
-            class="popup__input popup__input_avatar-link"
-            placeholder="Ссылка на картинку"
-            required
-          >
-          <span id="avatarLink-error" class="popup__input-error"></span> 
-          <button type="submit" class="popup__button-submit popup__button-submit_avatar">Сохранить</button>
-        </form>
-        <button type="button" class="button popup__close popup__close_avatar"></button>
-      </div>
-    </section>
-
+  <!-- ***************************************************************
+      Всплывающее окно подтверждения
+    -->
     <section class="popup popup_confirm">
       <div class="popup__content popup__content_confirm">
-        <h3 class="popup__title">Вы уверены?</h3>
-        <button type="button" class="popup__button-submit popup__button-submit_confirm">Да</button>
         <button type="button" class="button popup__close popup__close_confirm"></button>
+        <form class="popup__form poup__form_confirm">
+          <h3 class="popup__title">Вы уверены?</h3>
+          <button type="button" class="popup__button-submit popup__button-submit_confirm">Да</button>
+      </form>
       </div>
     </section>
 
+    <!-- ***************************************************************
+    Подключаем шаблон
+  -->
     <template id="cards-template">
       <li class="elements__item">
         <button type="button" aria-label="Удалить" class="button elements__button-delete"></button>
