elements__like-count => elements__likes-count

--- a/src/index.html
+++ b/src/index.html
@@ -190,7 +190,7 @@
             <h2 class="elements__title"></h2>
             <div class="elements__place-like">
               <button type="button" aria-label="Нравится" class="button elements__button-like"></button>
-              <span class="elements__like-count">0</span>
+              <span class="elements__likes-count">0</span>
             </div>
           </div>
       </li>
