--- a/src/index.html
+++ b/src/index.html
@@ -25,12 +25,12 @@
     <main class="container">
       <div class="content">
         <section class="profile">
-          <button class="profile__avatar">
+          <div class="profile__avatar">
             <img 
             class="profile__image" 
             src="<%=require('./images/avatar.jpg')%>" 
             alt="Профиль фото">
-          </button>
+          </div>
           <div class="profile__info">
               <h1 id="profileName" class="profile__name"></h1>
               <button type="button" aria-label="Редактировать" class="button profile__edit-button"></button>
@@ -98,9 +98,9 @@
       Всплывающее окно изменения аватара
     -->
     <section class="popup popup_avatar">
-      <div class="popoup__content popup__content_avatar">
-        <button type="button" class="button popup__close popup__close_avatar"></button>
-         <form name="form-newAvatar" class="popup__form popup__form_avatar">
+      <div class="popup__content popup__content_avatar">
+        <button type="button" aria-label="Закрыть" class="button popup__close popup__close_avatar"></button>
+         <form name="form-newAvatar" class="popup__form popup__form_avatar" novalidate>
           <h3 class="popup__title">Обновить аватар</h3>
           <input
             id="avatarLink"
@@ -171,11 +171,11 @@
     -->
     <section class="popup popup_confirm">
       <div class="popup__content popup__content_confirm">
-        <button type="button" class="button popup__close popup__close_confirm"></button>
-        <form class="popup__form popup__form_confirm">
+        <button type="button" aria-label="Закрыть" class="button popup__close popup__close_confirm"></button>
+        <form class="popup__form popup__form_confirm" novalidate>
           <h3 class="popup__title">Вы уверены?</h3>
           <button type="button" class="popup__button-submit popup__button-submit_confirm">Да</button>
-      </form>
+        </form>
       </div>
     </section>
 
