--- a/src/index.html
+++ b/src/index.html
@@ -174,7 +174,7 @@
         <button type="button" aria-label="Закрыть" class="button popup__close popup__close_confirm"></button>
         <form class="popup__form popup__form_confirm" novalidate>
           <h3 class="popup__title">Вы уверены?</h3>
-          <button type="button" class="popup__button-submit popup__button-submit_confirm">Да</button>
+          <button type="submit" class="popup__button-submit popup__button-submit_confirm">Да</button>
         </form>
       </div>
     </section>
