position absolute elements__button-delete

--- a/src/index.html
+++ b/src/index.html
@@ -184,7 +184,7 @@
   -->
     <template id="cards-template">
       <li class="elements__item">
-        <button type="button" aria-label="Удалить" class="elements__button-delete">
+        <button type="button" aria-label="Удалить" class="button elements__button-delete">
           <img src="<%=require('./images/delete_button.svg')%>" alt="Удалить">
         </button>
         <img class="elements__image" src="#" alt="#">
