добавлена подпись картинки в popupWithImage

--- a/src/index.html
+++ b/src/index.html
@@ -52,7 +52,7 @@
       Подвал сайта
     -->
     <footer class="footer">
-      <p class="footer__copyright">&copy; 2021 Tatiana KUPTSOVA</p>
+      <p class="footer__copyright">&copy; 2021 Mesto</p>
     </footer>
 
      <!-- ***************************************************************
